# SteamHapticsSingerAndroid

./: .gitignore  LICENSE.txt  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/gaincurve/: Triton_Trackpads.txt
app/src/main/cpp/: CMakeLists.txt  LICENSE  haptics_native.cpp
app/src/main/cpp/midifile/: LICENSE  midifile.c
app/src/main/java/com/balil/steamhaptics/: HapticsNative.java  HapticsPlayer.java  MainActivity.java  UsbControllerManager.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: device_filter.xml
